# cmVis

./: CMakeLists.txt  CMakePresets.json
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  main.cpp
